[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/bg_castle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/btn_back.png" type="Texture" id=2]
[ext_resource path="res://scenes/Setting.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/info_bar.png" type="Texture" id=4]
[ext_resource path="res://font_style/Amatic-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/ui_bar1_align.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 5 )

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_castle" parent="." instance=ExtResource( 1 )]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 120.0
margin_right = -320.0
margin_bottom = -136.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeControl" type="TextureButton" parent="TextureRect"]
margin_left = 392.0
margin_top = 120.0
margin_right = 896.0
margin_bottom = 272.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/ChangeControl"]
margin_left = 88.0
margin_top = 32.0
margin_right = 407.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Change Control"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="masterVolumn_label" type="Label" parent="TextureRect"]
margin_left = 272.0
margin_top = 344.0
margin_right = 519.0
margin_bottom = 415.0
custom_fonts/font = SubResource( 2 )
text = "Master Volumn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="masterVolumn_slider" type="HSlider" parent="TextureRect/masterVolumn_label"]
margin_left = 320.0
margin_right = 432.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 5 )
max_value = 20.0
value = 20.0
tick_count = 3

[node name="soundVolumn_label" type="Label" parent="TextureRect"]
margin_left = 272.0
margin_top = 448.0
margin_right = 519.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 2 )
text = "Sound Volumn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="soundVolumn_slider" type="HSlider" parent="TextureRect/soundVolumn_label"]
margin_left = 320.0
margin_right = 432.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 5 )
max_value = 20.0
value = 20.0
tick_count = 3

[node name="musicVolumn_label" type="Label" parent="TextureRect"]
margin_left = 272.0
margin_top = 552.0
margin_right = 519.0
margin_bottom = 623.0
custom_fonts/font = SubResource( 2 )
text = "Music Volumn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicVolumn_slider" type="HSlider" parent="TextureRect/musicVolumn_label"]
margin_left = 320.0
margin_right = 432.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 5 )
max_value = 20.0
value = 20.0
tick_count = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = 24.0
margin_right = 344.0
margin_bottom = 152.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
